name:                dirtywater
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/sproctor/dirtywater#readme
license:             GPL-2
license-file:        LICENSE
author:              Sean Proctor and Mike MacHenry
maintainer:          sproctor@gmail.com
copyright:           2016 Sean Proctor and Mike MacHenry
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Character
                     , Command
                     , Connection
                     , Item
                     , Location
                     , LuaHelpers
                     , Skill
                     , State
                     , Tangible
                     , Types
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , HDBC-sqlite3
                     , HDBC
                     , utf8-string
                     , filepath
                     , network
                     , directory
                     , parsec
                     , hslua
                     , transformers
                     , stm
                     , extra
                     , string-class
                     , strings
  --ghc-options:         -Wall
  default-language:    Haskell2010

executable dirtywater
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dirtywater
                     , HDBC
                     , strings
                     , string-class
                     , network
                     , directory
                     , utf8-string
                     , bytestring
                     , HDBC-sqlite3
                     , stm
  default-language:    Haskell2010

test-suite dirtywater-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Spec.hs
  build-depends:       base
                     , dirty-water
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sproctor/dirtywater
